2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_free): close the dbus connection
	before unref'ing it when we have a private connection (Closes: #365265)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_stop_play_pipeline):
	  Don't use poll_for_state_change() when stopping, it can lead to
	  deadlocks when called from the bus handler (e.g. after redirect
	  message) and isn't really necessary anyway. (Closes: #361787)

2006-10-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Jerry Tan <jerry.tan@sun.com>
	to add support for Wave and Au files (Closes: #365216)

2006-10-25  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_metadata_string):
	  Make extra sure we only return valid UTF-8 strings as metadata,
	  since g_markup_escape_text() tends to just crash if the input is
	  not valid UTF-8 (see #360552).

2006-10-24  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-volume.c: (bacon_volume_button_class_init),
	(bacon_volume_button_new), (bacon_volume_key_release),
	(cb_dock_button_press), (cb_dock_key_release), (cb_dock_key_press),
	(bacon_volume_scale_value_changed): update from libbacon, to get
	better accessibility support (Closes: #364637)

2006-10-23  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: return immediately in _rite if
	we already have a playlist, as we need to wait for it to be on-disk
	(Closes: #360592)

2006-10-23  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: remove is_mimetype_supported call,
	it was to work-around the broken server in bug #355881, for which
	the work isn't finished anyway. Same code is still on HEAD
	(Closes: #364307)

2006-10-17  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_free): Don't close the